Fix some issues due to branch merge